# Autonomous-Vehicle

./: .gitignore  CMakeLists.txt  README.md  calib_left.npz  camera_refinement.py  compile_commands.json  config.txt  copy.sh  index.html  install_dependencies.sh  main.cpp  main.py  run.sh  setup.sh  testpid.py
Include/: App.h  Camera.h  Config.h  LaneDetector.h  PWM.h  WebAPI.h  controller.h  motorDriver.h  mpu6500.h  ultrasonicDistance.h
Include/HWController/: PWM.h  controller.h  gpioChip.h  motorDriver.h  mpu6500.h  ultrasonicDistance.h
client/: package-lock.json  package.json
client/src/: App.jsx  Console.jsx  ControlPanel.jsx  Slider.jsx  VideoStream.jsx  data.js  index.css
client1/src/: App.jsx  data.js
docs/: .~lock.Bachelors-theisis.pdf#  ComputerVision.md  Controller.md  README.md
src/: App.cpp  Camera.cpp  Config.cpp  LaneDetector.cpp  PWM.cpp  WebAPI.cpp  config.py  controller.cpp  gpioChip.cpp  lane_finder.py  motorDriver.cpp  mpu6500.cpp  ultrasonicDistance.cpp  web_API.py
src/HWController/: PWM.cpp  controller.cpp  gpioChip.cpp  motorDriver.cpp  mpu6500.cpp  ultrasonicDistance.cpp
training-data/: video0.h264  video1.h264
